Fixes issue with spacing in an in-between breakpoint.

--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -167,3 +167,9 @@ body {
     margin-top: 300px;
   }
 }
+
+@media (max-width: 1000px) and (min-width: 992px) {
+  .Footer {
+    margin-top: 500px;
+  }
+}
